# NXTGEN_Appelpluk

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
visual_servoing/: .gitignore
visual_servoing/apple_ws/: visual_servoing.repos
visual_servoing/apple_ws/src/ball_detection/: CMakeLists.txt  package.xml
visual_servoing/apple_ws/src/ball_detection/config/: arducam_info.yaml  arducam_params.yaml  zed2_info_fhd.yaml  zed2_info_vga.yaml  zed2_params.yaml
visual_servoing/apple_ws/src/ball_detection/include/ball_detection/: ball_detector.hpp
visual_servoing/apple_ws/src/ball_detection/launch/: detect_aruco_live.launch.py  detect_ball_live.launch.py
visual_servoing/apple_ws/src/ball_detection/src/: ball_detector.cpp
visual_servoing/apple_ws/src/robot_moveit_config/: .setup_assistant  package.xml
visual_servoing/apple_ws/src/robot_moveit_config/config/: ur.srdf  ur.urdf.xacro
visual_servoing/apple_ws/src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
visual_servoing/apple_ws/src/robot_servoing/: CMakeLists.txt
visual_servoing/apple_ws/src/robot_servoing/launch/: control_robot.launch.py  moveit_robot.launch.py
visual_servoing/apple_ws/src/robot_servoing/model/rviz/: world.rviz
visual_servoing/apple_ws/src/robot_servoing/model/urdf/: demo_apple.urdf.xacro  robot.urdf.xacro  ur.urdf.xacro  (+2 more)
visual_servoing/apple_ws/src/robot_servoing/src/: move_arm.cpp  servo_camera_input.cpp
